<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE project [
        <!ELEMENT project (modelVersion|packaging|groupId|artifactId|version|name|properties|dependencies|build)*>
        <!ATTLIST project
                xmlns CDATA #REQUIRED
                xmlns:xsi CDATA #REQUIRED
                xsi:schemaLocation CDATA #REQUIRED>
        <!ELEMENT modelVersion (#PCDATA)>
        <!ELEMENT packaging (#PCDATA)>
        <!ELEMENT groupId (#PCDATA)>
        <!ELEMENT artifactId (#PCDATA)>
        <!ELEMENT version (#PCDATA)>
        <!ELEMENT name (#PCDATA)>
        <!ELEMENT properties (mainClass|maven.compiler.source|maven.compiler.target|project.build.sourceEncoding)*>
        <!ELEMENT mainClass (#PCDATA)>
        <!ELEMENT maven.compiler.source (#PCDATA)>
        <!ELEMENT maven.compiler.target (#PCDATA)>
        <!ELEMENT project.build.sourceEncoding (#PCDATA)>
        <!ELEMENT dependencies (dependency)*>
        <!ELEMENT dependency (groupId|artifactId|version)*>
        <!ELEMENT build (finalName|plugins)*>
        <!ELEMENT finalName (#PCDATA)>
        <!ELEMENT plugins (plugin)*>
        <!ELEMENT plugin (groupId|artifactId|version|configuration|executions)*>
        <!ELEMENT configuration (compilerArgs|mainClass)*>
        <!ELEMENT compilerArgs (arg)*>
        <!ELEMENT arg (#PCDATA)>
        <!ELEMENT executions (execution)*>
        <!ELEMENT execution (goals|configuration)*>
        <!ELEMENT goals (goal)*>
        <!ELEMENT goal (#PCDATA)>
        ]>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
  http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>

  <groupId>io.github.ace-lectures.2aa4</groupId>
  <artifactId>tennis</artifactId>
  <version>1.0</version>
  <name>McSCert :: 2AA4 :: Tennis</name>

  <properties>
    <mainClass>ca.mcscert.se2aa4.demos.tennis.Main</mainClass>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <!-- To read arguments from command line-->
    <dependency>
      <groupId>commons-cli</groupId>
      <artifactId>commons-cli</artifactId>
      <version>1.6.0</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.22.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.22.1</version>
    </dependency>
  </dependencies>

  <build>
    <finalName>tennis</finalName>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.11.0</version>
        <configuration>
          <compilerArgs>
            <arg>-proc:full</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>3.2.0</version>
        <executions>
          <execution>
            <goals>
              <goal>repackage</goal>
            </goals>
            <configuration>
              <mainClass>${mainClass}</mainClass>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>